@@ -5,15 +5,15 @@ AUX doc-extensions.patch 598 SHA256 af0a930523bccb31a7b9ab0ac0fb28fc635177b8d01f
 AUX fabric-1.4.2-git_tags_docs.patch 1046 SHA256 f2158f350de5ba110cb7ffb0cafae7c1e960b9f76cde9e96c2465f7f3b262563 SHA512 006ef53206dab157b5baff48d3852b94e9966586670db872b9a7d5519a550f017897dda6e99153072dc29c6172779959e63a804e5ce8db7e7f65101c1d519be5 WHIRLPOOL ff43cae4fa8c20fa6262b849f1eb610a7f523f848cde3b5b513cb331d988ad12a255caaa175d634d18bec7fa7de8d863363cfd19f8cd242686dcddd0cef568dc
 DIST Fabric-1.10.0.tar.gz 208969 SHA256 edb2702b4655600f0a49a97e654c79f5b21490ce30f77d1313dd851f0b60335a SHA512 991341dfb3f71e938c2a2e30f5bc158be84cb1600ab64c4f7c5c49decd0a38bc57615f9e07edfbed70d9ca796592d7c1a4f7f3e25a40c4d31049015df928b2e3 WHIRLPOOL c07ba33bd6e7832fd5527ec14e206d74a6a2b983dbb49a43d972f31e15e22f9642df4809adff72f43f92fca5c1d758a4ac540ed87e22f46adc25094b2aa4ccb3
 DIST Fabric-1.10.1.tar.gz 209750 SHA256 ab9c54e9496c89ae96ed4aa669e01c792376d75a7389ec90d4292282cc26f008 SHA512 a00f46ac28c61d20575af9f34e4e2bc54a79e836c29b395bbdf58538b6c75523a7ec6f3f40caf0f270d2ec8b0500806b14e80c4ed4d2077e39f4dbdd773d8637 WHIRLPOOL 88b5865ec80ff923292b0ba4a868a06fa5cc0f68b3a8ab2fbfb68f17422b9b60a365ea3b14b5f04929425bbcf9350acbc72dc1733200c18a80d954c3c1762ce9
-EBUILD fabric-1.10.0-r1.ebuild 1929 SHA256 2afed2b2ed94d1006f646ff16c173794c5132cb62221fbdc66fd57fdb9f51873 SHA512 4453478a62f9f6b491959ebb4c92eea0e98852030839a74987feb5deb1bcd42971e4a57d28ae995d54f63fe0ff97259471990c848013f24fbe77289d4e45e233 WHIRLPOOL 5d9ec3debe50305590f6e28a7cce451f0d25c3eb16bc137174626a5338e8d1546aedaac45f0a176f6c727503fcb166e07cab6804a336fe51730954ed13039733
+EBUILD fabric-1.10.0-r1.ebuild 1925 SHA256 2a223e1c17e1e9c8a25583b3079dd53a9416568dd4cbbdb00007405cf34c20ad SHA512 bd911a67897a48450ae335c8d3310b4b5a61960fd00f23725e6b519c1cb4319a907a6a8cdc844f57a007ede9f1ef486496ea5d89b7a1b2f884f5a847d800e34a WHIRLPOOL a399aa2539fe1e4614827e4e57dbbd77b6320190960b7621d565f7aef2fa5872e086a7c96131d20d59d670542be35c348e4b8e05ea89c71cab02651620c50bb6
 EBUILD fabric-1.10.0.ebuild 1973 SHA256 495c0881b1ea47e26cf7f93dc4a7d45cd6003fc86caf6d3bf651548f7b638889 SHA512 0c55424a8a2d6fe3ca1955b87dcde4a578a2a32b355dddd0b9c50c36cb4a52707e801195f9e65ed8e8d2fb08fa2d93d7a0d9c0f7abf66f5e48a801576d58d9b1 WHIRLPOOL 419ae6405eebc3df3fe601519804001045c22aabe4a31c44a112286157b3ca21e80def80d33b1b82e799f730a0ab41d5f32af37dba144df8daf1e412ff39c317
 EBUILD fabric-1.10.1.ebuild 1851 SHA256 01e9b29ab079a17c6e2930b0eae9af4709a64bd33bebbd9e817341db107b24d3 SHA512 f128a3385f667086dea7efe99e8a152e4cb122e42d4d29496848f7cffaaa08750ff02ac59d60d2df2731b21b29d6586b62cebba1e446b3c305867ee32f89edde WHIRLPOOL cf24c6f70036ed7beed66bcf0afdf064961ce5967d7c3f22097673cd8a3cc744a6248af621138740939d25a58ded98cf80b6098b6c36075a12af080f97afffaa
-MISC ChangeLog 8687 SHA256 ef8d1c18eec55a944d2ca94819a74f6a300d6f222c658a50051d67c5db5f8bc1 SHA512 55c4d7f9958c59ee46f584004d4f5c0a840308f7b49f7d4f94d3013bdf81fc9b2bc2a5af7019de85fae8c29c6456259d9228137eefa2f7df9cb745d18dd70202 WHIRLPOOL 45515d5ab512fec7823a3a751f8e4913c91305379ff9289bc924ca7d943a4dde56d4720c00101c02744c219a1d86246e8c75e2c778306a4929af7d52f2a4cfd5
+MISC ChangeLog 8789 SHA256 e967f890efd2643a5b48c0c2f8d803d0130fe8f347977ceb2829234a66c18891 SHA512 bbd1c9c72d3b9a245a13a6e8c1cd294409f983f1d3e58380f759b50d3e1bab9efccce2260d3231eba4da136f7b9e481c3fb925769c98220c5d7c1d4c5846b60c WHIRLPOOL 1e0048d5b6c637a95b2f24aaea01f91da109062b08ce630a72eb839a8ca3e857bef7617080111bde9d29e98542c260f9d153f3c25e8e43c22e83b5c68097fc50
 MISC metadata.xml 229 SHA256 3e4ac13baa3ece16df4c90c93ed406e87d61bfc4bed3f78682d45ce2b1281738 SHA512 74f6424417890077621ac6955e596ccb7da7ad26ccff9d556500390a91d2a4867c01c2ab56e0538fa9145371003ad3fbf8176d377ceafc044c1ba945fe4aa52e WHIRLPOOL 0c358e551fbabc3c800d834bc0358745add73a08e6643ddbdcb9db4311b794d185549192f262565d2b25bef4e3d059599640f55499db15e39c9452fbf211a506
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTVrrQACgkQso7CE7gHKw0HDQCfRMD0OPq4gI9pqVmZ/k4GlX32
-mNwAoJ1tB6nky0XDstXVonkAo4r+oPrN
-=XOX+
+iEYEAREIAAYFAlTh+EIACgkQCaWpQKGI+9RFZACfUkY4oH5jemrYAFF03fKKSJl+
+K8EAn0kqwA7tJUWDT6rmECtGHB6SDhxc
+=jLq1
 -----END PGP SIGNATURE-----
