@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST fudge-0.9.6.tar.gz 81653 SHA256 34690c4692e8717f4d6a2ab7d841070c93c8d0ea0d2615b47064e291f750b1a0 SHA512 69b2fa5bdd678779c0a8d9863a67e1e6724828720d2764f9f8958bc3598dcf39b22f9827efccb03014961d27d6e214c2125f639bab200b63c824c2306e3bb617 WHIRLPOOL 176df990c9adebe2d4f969603e48b2f1a797cf9935de3daeab98c078314a3fd88a19affdff5b784db5d570a3264f8cc849305b2e4761a7128c2cca7eed79062f
 DIST fudge-1.0.3.tar.gz 87558 SHA256 f8c8bfb3c0199dd06108c0c5a80e3645c7a071e0917b1a3bc73c761800809251 SHA512 7bbbcf517b2570fae20b882467aa7b739fcc9db2cd4fd2c363536da1a2bdd7c016417f42dcdb27c8422213c847eed7d8a90fd9d43eade2a238e5fc62630d5a6a WHIRLPOOL 9e02ea4d849e364ac979bf41c6fc626cdebf4b60186d9b63afe5dafa85ee4c73a9cdfbbc9762dd994e6b909f86f27caf4abe9f44394e203cbe900149f90f7960
-EBUILD fudge-0.9.6-r1.ebuild 1043 SHA256 f1d54ec6deb5d6c4781b07172341f6366d0bbdf1330d0b1989d3afec3c8a8f51 SHA512 43732aa9fbc551660d7bd03196860d8bd035c1557382c619f37e1d809011cc91d8d64cb9e9e7db10a4f4ce36112ebfff0c18380c226b24a3448debcdfe50491b WHIRLPOOL 60b32fe49affd29105ecfb4f10779e8742b21a66573331a4a94f6b69f504809513827df766e1503e06e5c500f676b6319ee46a4a921fc893cbeaaf89e4efc1e4
+EBUILD fudge-0.9.6-r1.ebuild 1040 SHA256 2f3617765708487366d9a1e4396edccae9ba9f9e3ec456ff2fb2594b81846dce SHA512 442c2fafd261328b8ec8eb1a37ecc446dab8e6159d656fb283165a437bb59d87df0cfe52c01ec7012174f6eb51589d69aa22ce7e082cc23f9567acfc1a8e7359 WHIRLPOOL 4543d89354a676b97a27fd43f92ce6e918c40cbf9f0e75db9f88e700a789801b1f1b37c6424ccf738d7b366f1c7432385f8f79edb710615136a94afb28353325
 EBUILD fudge-1.0.3-r2.ebuild 1073 SHA256 62cd38d71197fb8e969f8c18ce68e89a1c27c739de538dbc0e9b810d79498cd2 SHA512 4aafca386e79df86a0c6223e65cb26c91b39bb31cf9d2525008d1ca80ebde94c51081e1e1086a59d58a49f193802abb251a435cc286bc59ed962d4562f9fd02c WHIRLPOOL 6f8e54b97d10627ca77febba4bf672c7ad0477acc0e6c2d55e96f7d45c777a23d94364eb1c18164482b3fa14db004023dbff94eba754484f39431a949972ad6e
-MISC ChangeLog 2394 SHA256 8d943dd8388f532428ebf6717aa2785c150508f7ea56aa5c9153799837adba14 SHA512 6c173f02d4ad9cce4b68de78908c18b4f9698f509d82a657873dec5b0a64fd9bba0c959e668549bff818168cf7648eb0878de6d3f59462accb9510fb219b2f7b WHIRLPOOL d3a0470a1f22d4001a2f4b7d3edcd6cdfbbbb723f6daa1e03d55b9a790ed57342e2e0843437a2b21486eae25a87b9e78d6d4986d3ed669e1fcc8c2bb15f9d7b9
+MISC ChangeLog 2496 SHA256 cd843c5a892e5751a9799c4b9c2e5b3a8c67c9aa8b0cab4af58e1cc71787a403 SHA512 bbd5863498b24d1691f3c69025e886e552dcea9769c1e057441d625db7c8a139d0678a622553bdb5dc6a14fbf2e070c6b146c19c74edce63a338a4338fd449c2 WHIRLPOOL f30888e076aa88637693687a80c72a19d511a0b91b1a88c2679a99d0737971bb00a52d9f3f95c1a8cd432d33e9996f2aea3839fad2d38cecdc46041abb573541
 MISC metadata.xml 228 SHA256 768704275b25109de824ec3e86a53b3e8bd3b51929c9be2a66fd52595b653acb SHA512 94bb6ac2b8de3ea7fa396a5dee59c993d8614cdc97990192a50dc2903e3af669de6a83873be82ba01d72c14c91cd1913b9c729721a9ce47edde7e8a389ce4649 WHIRLPOOL 3f9607a81bf8f28bd9fe8f91cdd73fcbc281a5e126834d1f600d82ffd9ae696297ba24069604167c922568c0e662286fc099554cc4d946f9cd79edabe338ec85
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlTh+CoACgkQCaWpQKGI+9QNeACfcn58/p7aJY1LzWGsUbo6mEra
+vm8AnjLNQ0erZyt5wby1TmE+dfEoHQdF
+=RVuw
+-----END PGP SIGNATURE-----
