@@ -4,11 +4,11 @@ DESCRIPTION=Replace real objects with fakes (mocks, stubs, etc) while testing
 EAPI=5
 HOMEPAGE=http://farmdev.com/projects/fudge/ http://pypi.python.org/pypi/fudge
 IUSE=doc test python_targets_python2_7 python_targets_python3_3 python_targets_pypy
-KEYWORDS=~amd64 ~x86
+KEYWORDS=amd64 x86
 LICENSE=MIT
 RDEPEND=python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) python_targets_pypy? ( virtual/pypy:0= ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_targets_python3_3(-)?,python_targets_pypy(-)?,-python_single_target_python2_7(-),-python_single_target_python3_3(-),-python_single_target_pypy(-)]
 REQUIRED_USE=|| ( python_targets_python2_7 python_targets_python3_3 python_targets_pypy )
 SLOT=0
 SRC_URI=mirror://pypi/f/fudge/fudge-0.9.6.tar.gz
 _eclasses_=distutils-r1	f810ae4ac7e5c3db4ff72db46e3c40d1	eutils	998e5931fb95b10a6a11ec796ada2759	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	236a8d81f730332749bd484d8b53ee91	python-utils-r1	7d5f4ad9ba85664d8c5f56041a70f4c3	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=3acd0ef871f266c342c7aa2f69d18cd5
+_md5_=252feab3ebd1007c563355bcb400bc79
