@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9792 2015/02/15 16:58:46 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9793 2015/02/16 14:28:22 grknight Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  16 Feb 2015; Brian Evans <grknight@gentoo.org> package.mask:
+  Mask MySQL and MariaDB 5.5 series for security bug 537216
 
   15 Feb 2015; Hans de Graaff <graaff@gentoo.org> package.mask:
   Mask old virtuals based on the slot-per-version idea for removal, bug 421497.
