@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/fabric
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/fabric/ChangeLog,v 1.54 2015/02/07 06:20:19 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/fabric/ChangeLog,v 1.55 2015/02/16 14:01:36 pacho Exp $
+
+  16 Feb 2015; Pacho Ramos <pacho@gentoo.org> fabric-1.10.0-r1.ebuild:
+  amd64/x86 stable, bug #530324
 
 *fabric-1.10.1 (07 Feb 2015)
 
